--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "types": ["node", "jest"],
     "target": "ES2020",
     "module": "CommonJS",
+    "moduleResolution": "node",
+    "rootDir": "./src",
     "outDir": "dist",
 
     "strict": true,
@@ -11,12 +13,13 @@
 
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "isolatedModules": true,
 
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
     }
   },
-  "include": ["src", "tests"],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
