--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "mongoose": "^9.1.2"
+    "mongoose": "^9.1.2",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
+    "mongoose": "^9.1.2",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -28,6 +32,7 @@
     "@types/supertest": "^6.0.3",
     "eslint": "^9.39.2",
     "jest": "^30.2.0",
+    "mongodb-memory-server": "^11.0.1",
     "nodemon": "^3.1.11",
     "prettier": "^3.7.4",
     "supertest": "^7.2.2",
