--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
+    "@types/semver": "^7.7.1",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.39.2",
     "jest": "^30.2.0",
